--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>tobijust.github.io</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>Bairline Fluggesellschaft</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
+    />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but tobijust.github.io doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but tobijust.github.io doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-analytics.js"></script> --> -->
+
+    <script>
+      // // Your web app's Firebase configuration
+      // var firebaseConfig = {
+      //   apiKey: 'AIzaSyCZQmk_bftIBEzWImM0_0VZxgtvwXS84iA',
+      //   authDomain: 'bairline-37370.firebaseapp.com',
+      //   databaseURL: 'https://bairline-37370.firebaseio.com',
+      //   projectId: 'bairline-37370',
+      //   storageBucket: 'bairline-37370.appspot.com',
+      //   messagingSenderId: '1098762527571',
+      //   appId: '1:1098762527571:web:eef384254031599876b7a6',
+      //   measurementId: 'G-GYFY1J76ZN'
+      // }
+      // // Initialize Firebase
+      // firebase.initializeApp(firebaseConfig)
+    </script>
   </body>
 </html>
